syntax = "proto3";

import "github.com/loomnetwork/go-loom/types/types.proto";

enum VMType {
    PLUGIN = 0;
    EVM = 1;
}

message MessageTx {
    Address to = 1;
    Address from = 2;
    bytes data = 3;
}

message DeployTx {
    VMType vm_type = 1;
    bytes code = 2;
    string name = 3;
}

message CallTx {
    VMType vm_type = 1;
    bytes input = 2;
}

message DeployResponse {
    Address contract = 1;
    bytes output = 2;
}

message Event {
    Address contract = 1;
    repeated bytes topics = 2;
    bytes data = 3;
}

message EvmTxReceipt {
    int32 transaction_index = 1;
    bytes block_hash = 2;
    int64 block_number = 3;
    int32 cumulative_gas_used = 4;
    int32 gas_used = 5 ;
    bytes contract_address = 6;
    repeated Event logs = 7;
    bytes logs_bloom = 8;
    int32 status = 9;
}